--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Tic Tac Toe Game</h1>
+        <h2>CelestiumCode</h2>
+    </div>
+    <main>
+
+        <div class="game-mode">
+            <button id="pvp-button">Play vs Player</button>
+            <button id="pvai-button">Play vs AI</button>
+            <button id="reset-button">Reset</button>
+        </div>
+        <div class="player-info"><h2>Reload the page to change game mode</h2></div>
+        <div class="board">
+            <div class="cell" data-row="0" data-col="0"></div>
+            <div class="cell" data-row="0" data-col="1"></div>
+            <div class="cell" data-row="0" data-col="2"></div>
+            <div class="cell" data-row="1" data-col="0"></div>
+            <div class="cell" data-row="1" data-col="1"></div>
+            <div class="cell" data-row="1" data-col="2"></div>
+            <div class="cell" data-row="2" data-col="0"></div>
+            <div class="cell" data-row="2" data-col="1"></div>
+            <div class="cell" data-row="2" data-col="2"></div>
+        </div>
+        <div class="winner-block">
+
+        </div>
+    </main>
+    <script src="main.js"></script>
 </body>
 </html>
